[add] 패키지 트리 정리 및 서버 파일 생성

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,7 @@
 plugins {
     id 'java'
-    
     id 'eclipse-wtp'
-    // => 'eclipse' 플러그인 기능을 포함한다.
-    // => 이클립스 웹 프로젝트용 설정 파일을 생성한다.
-
     id 'war'
-    // => 배치 관련 기능을 처리한다.
 }
 
 tasks.withType(JavaCompile) {
@@ -25,6 +20,9 @@ repositories {
 }
 
 dependencies {
+  // Reflection API를 좀 더 쉽게 사용하게 도와주는 유틸리티
+  implementation 'org.reflections:reflections:0.9.12'
+
   // log4j 1.2.x 라이브러리
   //implementation 'log4j:log4j:1.2.17'
   
@@ -37,11 +35,17 @@ dependencies {
   // Mybatis 퍼시스턴스 프레임워크
   implementation 'org.mybatis:mybatis:3.5.4'
 
+  // Spring WebMVC 라이브러리 
+  implementation 'org.springframework:spring-webmvc:5.2.5.RELEASE'
+
   // Spring IoC 컨테이너
-  implementation 'org.springframework:spring-context:5.2.4.RELEASE'
+  // => Spring WebMVC 라이브러리 spring-context 라이브러리를 사용하기 때문에  
+  //    자동으로 추가된다.
+  // => 따라서 그래이들 스크립트 파일에 명시할 필요가 없다.
+  // implementation 'org.springframework:spring-context:5.2.5.RELEASE'
 
   // Spring JDBC 관련 라이브러리
-  implementation 'org.springframework:spring-jdbc:5.2.4.RELEASE'
+  implementation 'org.springframework:spring-jdbc:5.2.5.RELEASE'
   
   // Mybatis를 Spring IoC와 연결하는 어댑터 라이브러리
   implementation 'org.mybatis:mybatis-spring:2.0.4'
@@ -62,6 +66,16 @@ dependencies {
   // => compileOnly : 컴파일한 후 생성되는 빌드 파일에 포함되지 않는다.
   //
   compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+  
+  // JSTL API 및 구현 라이브러리
+  implementation 'jstl:jstl:1.2'
+
+  // Spring의 MultipartResolver를 사용하려면 
+  // Servlet 3.0에서 제공하는 multipart 처리기를 등록하거나, 
+  // 또는 Apache에서 제공하는 multipart 처리기를 등록해야 한다.
+  // 
+  // => apache의 multipart 처리기 등록
+  implementation 'commons-fileupload:commons-fileupload:1.4'
   
   implementation 'com.google.guava:guava:28.1-jre'
   testImplementation 'junit:junit:4.12'
