--- a/src/main/resources/com/nmnm/gms/conf/jdbc.properties
+++ b/src/main/resources/com/nmnm/gms/conf/jdbc.properties
@@ -1,5 +1,5 @@
 # key=value
 jdbc.driver=org.mariadb.jdbc.Driver
-jdbc.url=jdbc:mariadb://localhost:3306/nmdb
-jdbc.username=root
+jdbc.url=jdbc:mariadb://localhost:3306/nmnmdb
+jdbc.username=study
 jdbc.password=1111
