[add] 회원간 쪽지 기능 (구현중)
build.gradle 웹 소켓 관련 dependency 추가
쪽지 전송폼 src/main/webapp/WEB-INF/jsp/member/sendForm.jsp 추가
src/main/resources/com/nmnm/gms/mapper/MemberMapper.xml 변경

src/main/java/com/nmnm/gms/domain/Member.java Message 참조변수 추가

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies {
   // Spring JDBC 관련 라이브러리
   implementation 'org.springframework:spring-jdbc:5.2.5.RELEASE'
   
+  // Spring WebSocket 관련 라이브러리 (쪽지)
+  implementation 'org.springframework:spring-websocket:5.2.5.RELEASE'
+  
   // Mybatis를 Spring IoC와 연결하는 어댑터 라이브러리
   implementation 'org.mybatis:mybatis-spring:2.0.4'
 
