--- a/build.gradle
+++ b/build.gradle
@@ -89,5 +89,10 @@ dependencies {
   
   implementation 'com.google.guava:guava:28.1-jre'
   testImplementation 'junit:junit:4.12'
+  
+  implementation 'org.springframework:spring-context-support:5.2.6.RELEASE'
+  
+ implementation 'javax.mail:mailapi:1.4.3'
+  
 }
 
