[mod] 회원db에 userkey,auth_status추가. sns 삭제

--- a/build.gradle
+++ b/build.gradle
@@ -97,4 +97,11 @@ dependencies {
   // Tiles 라이브러리 
   implementation 'org.apache.tiles:tiles-jsp:3.0.8'
   
+  implementation 'org.springframework.security:spring-security-web:5.3.2.RELEASE'
+  
+  implementation 'org.springframework.security:spring-security-config:5.3.2.RELEASE'
+  
+  implementation 'org.springframework.security:spring-security-taglibs:5.3.2.RELEASE'
+  
+  
 }
