--- a/build.gradle
+++ b/build.gradle
@@ -103,5 +103,8 @@ dependencies {
   
   implementation 'org.springframework.security:spring-security-taglibs:5.3.2.RELEASE'
   
+  implementation 'com.github.scribejava:scribejava-core:2.8.1'
+  
+  
   
 }
