--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,7 @@ implementation 'com.github.cliftonlabs:json-simple:3.0.2'
 
 // jackson 라이브러리  
 implementation 'com.mastfrog:jackson:2.6.10'
+implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr353:2.11.0'
   
 
   
