--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ repositories {
 
 dependencies {
    implementation 'org.apache.commons:commons-email:1.5'
+   
+implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
   // Reflection API를 좀 더 쉽게 사용하게 도와주는 유틸리티
   implementation 'org.reflections:reflections:0.9.12'
